Revert "Routing of incoming interactions"