@@ -1,6 +1,7 @@
 package org.jembi.jempi.bootstrapper.data.sql.postgres;
 
 import java.sql.*;
+import java.util.Locale;
 
 
 public class PostgresDALLib {
@@ -10,7 +11,6 @@ public class PostgresDALLib {
    private final String ip;
    private final String defaultDb;
    private final int port;
-
    public PostgresDALLib(
          final String ip,
          final int port,
@@ -25,13 +25,10 @@ public class PostgresDALLib {
    }
 
    private String getDbUrl(final String db) {
-      return "jdbc:postgresql://%s:%d/%s".formatted(ip, port, db);
+      return  String.format(Locale.ROOT, "jdbc:postgresql://%s:%d/%s", ip, port, db);
    }
-
    private Connection getConnection(final String dbName) throws SQLException {
-      return DriverManager.getConnection(getDbUrl(dbName != null
-                                                        ? dbName
-                                                        : defaultDb), this.usr, this.psw);
+      return DriverManager.getConnection(getDbUrl(dbName != null ? dbName : defaultDb), this.usr, this.psw);
    }
 
    public Boolean createDb(final String dbName) throws SQLException {
@@ -43,7 +40,7 @@ public class PostgresDALLib {
       return true;
    }
 
-   protected boolean databaseExists(final String databaseName) throws SQLException {
+   protected  boolean databaseExists(final String databaseName) throws SQLException {
       String query = "SELECT 1 FROM pg_database WHERE datname = ?";
       try (PreparedStatement preparedStatement = getConnection(null).prepareStatement(query)) {
          preparedStatement.setString(1, databaseName);
@@ -52,17 +49,13 @@ public class PostgresDALLib {
          }
       }
    }
-
    public String getCreateDbSchema(final String dbName) {
       return String.format("""
                            CREATE DATABASE %s
                            """, dbName);
    }
 
-   public <T extends PreparedStatement> Boolean runQuery(
-         final ThrowingFunction<Connection, T, SQLException> getStatement,
-         final Boolean autoCommit,
-         final String dbName) throws SQLException {
+   public <T extends PreparedStatement> Boolean runQuery(final ThrowingFunction<Connection, T, SQLException> getStatement, final Boolean autoCommit, final String dbName) throws SQLException {
       try (Connection connection = this.getConnection(dbName)) {
          connection.setAutoCommit(autoCommit);
 
