@@ -24,6 +24,7 @@ public final class LibMPI {
    private final AuditTrailBridge auditTrailUtil;
 
 
+
    public LibMPI(
          final Level level,
          final String[] host,
@@ -91,16 +92,12 @@ public final class LibMPI {
       return client.countGoldenRecords();
    }
 
-   public List<SourceId> findSourceId(
-         final String facility,
-         final String patient) {
+   public List<CustomSourceId> findSourceId(final String facility, final String patient) {
       client.connect();
       return client.findSourceId(facility, patient);
    }
 
-   public List<ExpandedSourceId> findExpandedSourceIdList(
-         final String facility,
-         final String patient) {
+   public List<ExpandedSourceId> findExpandedSourceIdList(final String facility, final String patient) {
       client.connect();
       return client.findExpandedSourceIdList(facility, patient);
    }
@@ -110,7 +107,7 @@ public final class LibMPI {
       return client.findInteraction(iid);
    }
 
-   public List<Interaction> findInteractions(final List<String> iidList) {
+   public List<Interaction> findInteraction(final List<String> iidList) {
       client.connect();
       return client.findInteractions(iidList);
    }
@@ -124,8 +121,8 @@ public final class LibMPI {
       client.connect();
       final var records = client.findGoldenRecords(List.of(goldenId));
       if (records.isRight()) {
-         if (!records.get().data().isEmpty()) {
-            return Either.right(records.get().data().getFirst());
+         if (!records.get().isEmpty()) {
+            return Either.right(records.get().getFirst());
          } else {
             return Either.left(new MpiServiceError.CRGidDoesNotExistError(goldenId));
          }
@@ -135,25 +132,21 @@ public final class LibMPI {
 
    public Either<MpiGeneralError, List<GoldenRecord>> findGoldenRecords(final List<String> goldenIds) {
       client.connect();
-      final var results = client.findGoldenRecords(goldenIds);
-      if (results.isLeft()) {
-         return Either.left(results.getLeft());
-      }
-      return Either.right(results.get().data());
+      return client.findGoldenRecords(goldenIds);
    }
 
    public ExpandedGoldenRecord findExpandedGoldenRecord(final String goldenId) {
       client.connect();
-      final var results = client.findExpandedGoldenRecords(List.of(goldenId));
-      if (!results.data().isEmpty()) {
-         return results.data().getFirst();
+      final var records = client.findExpandedGoldenRecords(List.of(goldenId));
+      if (!records.isEmpty()) {
+         return records.getFirst();
       }
       return null;
    }
 
    public List<ExpandedGoldenRecord> findExpandedGoldenRecords(final List<String> goldenIds) {
       client.connect();
-      return client.findExpandedGoldenRecords(goldenIds).data();
+      return client.findExpandedGoldenRecords(goldenIds);
    }
 
    public List<String> findGoldenIds() {
@@ -168,23 +161,19 @@ public final class LibMPI {
       return client.fetchGoldenIds(offset, length);
    }
 
-   public List<GoldenRecord> findLinkCandidates(final DemographicData demographicData) {
+   public List<GoldenRecord> findLinkCandidates(final CustomDemographicData demographicData) {
       client.connect();
       return client.findLinkCandidates(demographicData);
    }
 
-   public List<GoldenRecord> findMatchCandidates(final DemographicData demographicData) {
+   public List<GoldenRecord> findMatchCandidates(final CustomDemographicData demographicData) {
       client.connect();
       return client.findMatchCandidates(demographicData);
    }
 
    public Either<MpiGeneralError, List<GoldenRecord>> apiCrFindGoldenRecords(final ApiModels.ApiCrFindRequest request) {
       client.connect();
-      final var results = client.apiCrFindGoldenRecords(request);
-      if (results.isLeft()) {
-         return Either.left(results.getLeft());
-      }
-      return Either.right(results.get().data());
+      return client.apiCrFindGoldenRecords(request);
    }
 
    public LibMPIPaginatedResultSet<ExpandedGoldenRecord> simpleSearchGoldenRecords(
@@ -194,8 +183,7 @@ public final class LibMPI {
          final String sortBy,
          final Boolean sortAsc) {
       client.connect();
-      final var results = client.simpleSearchGoldenRecords(params, offset, limit, sortBy, sortAsc);
-      return new LibMPIPaginatedResultSet<>(results.data(), results.pagination().getFirst());
+      return client.simpleSearchGoldenRecords(params, offset, limit, sortBy, sortAsc);
    }
 
    public LibMPIPaginatedResultSet<ExpandedGoldenRecord> customSearchGoldenRecords(
@@ -205,8 +193,7 @@ public final class LibMPI {
          final String sortBy,
          final Boolean sortAsc) {
       client.connect();
-      final var results = client.customSearchGoldenRecords(params, offset, limit, sortBy, sortAsc);
-      return new LibMPIPaginatedResultSet<>(results.data(), results.pagination().getFirst());
+      return client.customSearchGoldenRecords(params, offset, limit, sortBy, sortAsc);
    }
 
    public LibMPIPaginatedResultSet<Interaction> simpleSearchInteractions(
@@ -216,8 +203,7 @@ public final class LibMPI {
          final String sortBy,
          final Boolean sortAsc) {
       client.connect();
-      final var results = client.simpleSearchInteractions(params, offset, limit, sortBy, sortAsc);
-      return new LibMPIPaginatedResultSet<>(results.data(), results.pagination().getFirst());
+      return client.simpleSearchInteractions(params, offset, limit, sortBy, sortAsc);
    }
 
    public LibMPIPaginatedResultSet<Interaction> customSearchInteractions(
@@ -227,8 +213,7 @@ public final class LibMPI {
          final String sortBy,
          final Boolean sortAsc) {
       client.connect();
-      final var results = client.customSearchInteractions(params, offset, limit, sortBy, sortAsc);
-      return new LibMPIPaginatedResultSet<>(results.data(), results.pagination().getFirst());
+      return client.customSearchInteractions(params, offset, limit, sortBy, sortAsc);
    }
 
    public LibMPIPaginatedResultSet<String> filterGids(
@@ -265,13 +250,13 @@ public final class LibMPI {
       if (result) {
          sendAuditEvent(interactionID,
                         goldenID,
-                        "score: %.5f -> %.5f".formatted(oldScore, newScore),
+                        String.format(Locale.ROOT, "score: %.5f -> %.5f", oldScore, newScore),
                         newScore,
                         LinkingRule.UPDATE);
       } else {
          sendAuditEvent(interactionID,
                         goldenID,
-                        "set score error: %.5f -> %.5f".formatted(oldScore, newScore),
+                        String.format(Locale.ROOT, "set score error: %.5f -> %.5f", oldScore, newScore),
                         newScore,
                         LinkingRule.UPDATE);
 
@@ -293,16 +278,23 @@ public final class LibMPI {
          final String goldenId,
          final String fieldName,
          final String oldValue,
-         final String newValue,
-         final String alias) {
+         final String newValue) {
       client.connect();
       final var result = client.updateGoldenRecordField(goldenId, fieldName, newValue);
       if (result) {
-         sendAuditEvent(interactionId, goldenId, "%s: '%s' -> '%s'".formatted(alias, oldValue, newValue),
+         sendAuditEvent(interactionId, goldenId, String.format(Locale.ROOT,
+                                                               "%s: '%s' -> '%s'",
+                                                               fieldName,
+                                                               oldValue,
+                                                               newValue),
                         -1.0F,
                         LinkingRule.UPDATE);
       } else {
-         sendAuditEvent(interactionId, goldenId, "%s: error updating '%s' -> '%s'".formatted(alias, oldValue, newValue),
+         sendAuditEvent(interactionId, goldenId, String.format(Locale.ROOT,
+                                                               "%s: error updating '%s' -> '%s'",
+                                                               fieldName,
+                                                               oldValue,
+                                                               newValue),
                         -1.0F,
                         LinkingRule.UPDATE);
       }
