@@ -11,7 +11,6 @@ import org.apache.logging.log4j.core.config.Configurator;
 import org.jembi.jempi.libmpi.LibMPIClientInterface;
 import org.jembi.jempi.libmpi.MpiGeneralError;
 import org.jembi.jempi.libmpi.MpiServiceError;
-import org.jembi.jempi.shared.config.DGraphConfig;
 import org.jembi.jempi.shared.models.*;
 import org.jembi.jempi.shared.utils.AppUtils;
 
@@ -19,10 +18,8 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Locale;
 import java.util.UUID;
-import java.util.stream.IntStream;
 
-import static org.jembi.jempi.shared.config.Config.DGRAPH_CONFIG;
-import static org.jembi.jempi.shared.config.Config.FIELDS_CONFIG;
+import static org.jembi.jempi.shared.utils.AppUtils.camelToSnake;
 
 final class DgraphMutations {
 
@@ -30,49 +27,6 @@ final class DgraphMutations {
 
    DgraphMutations(final Level level) {
       Configurator.setLevel(this.getClass(), level);
-   }
-
-   static String createInteractionTriple(
-         final AuxInteractionData auxInteractionData,
-         final DemographicData demographicData,
-         final String sourceUID) {
-      final String uuid = UUID.randomUUID().toString();
-      final List<Object> params = new ArrayList<>(23);
-      params.addAll(List.of(uuid, sourceUID));
-      params.addAll(List.of(uuid, AppUtils.quotedValue(auxInteractionData.auxDateCreated().toString())));
-      IntStream.range(0, FIELDS_CONFIG.userAuxInteractionFields.size())
-               .forEach(i -> params.addAll(List.of(
-                     uuid,
-                     AppUtils.quotedValue(auxInteractionData.auxUserFields()
-                                                            .get(i)
-                                                            .value()))));
-      demographicData.fields.forEach(f -> params.addAll(List.of(uuid, AppUtils.quotedValue(f.value()))));
-      params.add(uuid);
-      return DGRAPH_CONFIG.mutationCreateInteractionTriple.formatted(params.toArray(Object[]::new));
-   }
-
-   static String createLinkedGoldenRecordTriple(
-         final AuxGoldenRecordData auxGoldenRecordData,
-         final DemographicData demographicData,
-         final String interactionUID,
-         final String sourceUID,
-         final float score) {
-      final String uuid = UUID.randomUUID().toString();
-      final List<Object> params = new ArrayList<>(26);
-      params.addAll(List.of(uuid, sourceUID));
-      params.addAll(List.of(uuid, AppUtils.quotedValue(auxGoldenRecordData.auxDateCreated().toString())));
-      params.addAll(List.of(uuid, AppUtils.quotedValue(auxGoldenRecordData.auxAutoUpdateEnabled().toString())));
-      IntStream.range(0, FIELDS_CONFIG.userAuxGoldenRecordFields.size())
-               .forEach(i -> params.addAll(List.of(
-                     uuid,
-                     AppUtils.quotedValue(auxGoldenRecordData.auxUserFields()
-                                                             .get(i)
-                                                             .value()))));
-
-      demographicData.fields.forEach(f -> params.addAll(List.of(uuid, AppUtils.quotedValue(f.value()))));
-      params.addAll(List.of(uuid, interactionUID, score));
-      params.add(uuid);
-      return DGRAPH_CONFIG.mutationCreateLinkedGoldenRecordTriple.formatted(params.toArray(Object[]::new));
    }
 
    LinkInfo addNewDGraphInteraction(final Interaction interaction) {
@@ -85,7 +39,7 @@ final class DgraphMutations {
                                                          result.interactionUID,
                                                          result.sourceUID,
                                                          1.0F,
-                                                         new AuxGoldenRecordData(interaction.auxInteractionData()));
+                                                         new CustomUniqueGoldenRecordData(interaction.uniqueInteractionData()));
       if (grUID == null) {
          LOGGER.error("Failed to insert golden record");
          return null;
@@ -97,17 +51,19 @@ final class DgraphMutations {
          final String goldenId,
          final String fieldName,
          final String val) {
-      String predicate = "GoldenRecord." + AppUtils.camelToSnake(fieldName);
+      String predicate = "GoldenRecord." + camelToSnake(fieldName);
       return updateGoldenRecordPredicate(goldenId, predicate, val);
    }
 
-   private String createSourceIdTriple(final SourceId sourceId) {
+   private String createSourceIdTriple(final CustomSourceId sourceId) {
       final String uuid = UUID.randomUUID().toString();
-      return """
-             _:%s  <SourceId.facility>                 %s          .
-             _:%s  <SourceId.patient>                  %s          .
-             _:%s  <dgraph.type>                      "SourceId"   .
-             """.formatted(uuid,
+      return String.format(Locale.ROOT,
+                           """
+                           _:%s  <SourceId.facility>                 %s          .
+                           _:%s  <SourceId.patient>                  %s          .
+                           _:%s  <dgraph.type>                      "SourceId"   .
+                           """,
+                           uuid,
                            AppUtils.quotedValue(sourceId.facility()),
                            uuid,
                            AppUtils.quotedValue(sourceId.patient()),
@@ -118,15 +74,19 @@ final class DgraphMutations {
          final String goldenId,
          final String predicate,
          final String value) {
-      final var mutation = DgraphProto.Mutation.newBuilder()
-                                               .setSetNquads(ByteString.copyFromUtf8("""
-                                                                                     <%s> <%s>          "%s"^^<xs:string>    .
-                                                                                     <%s> <dgraph.type> "GoldenRecord"       .
-                                                                                     """.formatted(goldenId,
-                                                                                                   predicate,
-                                                                                                   value,
-                                                                                                   goldenId)))
-                                               .build();
+      final var mutation = DgraphProto
+            .Mutation
+            .newBuilder()
+            .setSetNquads(ByteString.copyFromUtf8(String.format(Locale.ROOT,
+                                                                """
+                                                                <%s> <%s>          "%s"^^<xs:string>    .
+                                                                <%s> <dgraph.type> "GoldenRecord"       .
+                                                                """,
+                                                                goldenId,
+                                                                predicate,
+                                                                value,
+                                                                goldenId)))
+            .build();
       return DgraphClient.getInstance().doMutateTransaction(mutation) != null;
    }
 
@@ -135,17 +95,21 @@ final class DgraphMutations {
          final String goldenId,
          final String predicate,
          final Boolean value) {
-      final var mutation = DgraphProto.Mutation.newBuilder()
-                                               .setSetNquads(ByteString.copyFromUtf8("""
-                                                                                     <%s> <%s>          "%s"^^<xs:boolean>   .
-                                                                                     <%s> <dgraph.type> "GoldenRecord"       .
-                                                                                     """.formatted(goldenId,
-                                                                                                   predicate,
-                                                                                                   Boolean.TRUE.equals(value)
-                                                                                                         ? "true"
-                                                                                                         : "false",
-                                                                                                   goldenId)))
-                                               .build();
+      final var mutation = DgraphProto
+            .Mutation
+            .newBuilder()
+            .setSetNquads(ByteString.copyFromUtf8(String.format(Locale.ROOT,
+                                                                """
+                                                                <%s> <%s>          "%s"^^<xs:boolean>   .
+                                                                <%s> <dgraph.type> "GoldenRecord"       .
+                                                                """,
+                                                                goldenId,
+                                                                predicate,
+                                                                Boolean.TRUE.equals(value)
+                                                                      ? "true"
+                                                                      : "false",
+                                                                goldenId)))
+            .build();
       return DgraphClient.getInstance().doMutateTransaction(mutation) != null;
    }
 
@@ -243,8 +207,8 @@ final class DgraphMutations {
       final DgraphProto.Mutation mutation = DgraphProto
             .Mutation
             .newBuilder()
-            .setSetNquads(ByteString.copyFromUtf8(DgraphMutations.createInteractionTriple(
-                  interaction.auxInteractionData(),
+            .setSetNquads(ByteString.copyFromUtf8(CustomDgraphMutations.createInteractionTriple(
+                  interaction.uniqueInteractionData(),
                   interaction.demographicData(),
                   sourceIdUid)))
             .build();
@@ -252,16 +216,16 @@ final class DgraphMutations {
    }
 
    private String cloneGoldenRecordFromInteraction(
-         final DemographicData interaction,
+         final CustomDemographicData interaction,
          final String interactionUID,
          final String sourceUID,
          final float score,
-         final AuxGoldenRecordData customUniqueGoldenRecordData) {
-      final var command = DgraphMutations.createLinkedGoldenRecordTriple(customUniqueGoldenRecordData,
-                                                                         interaction,
-                                                                         interactionUID,
-                                                                         sourceUID,
-                                                                         score);
+         final CustomUniqueGoldenRecordData customUniqueGoldenRecordData) {
+      final var command = CustomDgraphMutations.createLinkedGoldenRecordTriple(customUniqueGoldenRecordData,
+                                                                               interaction,
+                                                                               interactionUID,
+                                                                               sourceUID,
+                                                                               score);
       final DgraphProto.Mutation mutation =
             DgraphProto.Mutation.newBuilder().setSetNquads(ByteString.copyFromUtf8(command)).build();
       return DgraphClient.getInstance().doMutateTransaction(mutation);
@@ -280,11 +244,12 @@ final class DgraphMutations {
       DgraphClient.getInstance().doMutateTransaction(mutation);
    }
 
+
    boolean updateGoldenRecordField(
          final String goldenId,
          final String fieldName,
          final Boolean val) {
-      String predicate = "GoldenRecord." + AppUtils.camelToSnake(fieldName);
+      String predicate = "GoldenRecord." + camelToSnake(fieldName);
       return updateGoldenRecordPredicate(goldenId, predicate, val);
    }
 
@@ -292,7 +257,7 @@ final class DgraphMutations {
          final String goldenId,
          final String fieldName,
          final Double val) {
-      String predicate = "GoldenRecord." + AppUtils.camelToSnake(fieldName);
+      String predicate = "GoldenRecord." + camelToSnake(fieldName);
       return updateGoldenRecordPredicate(goldenId, predicate, val);
    }
 
@@ -300,7 +265,7 @@ final class DgraphMutations {
          final String goldenId,
          final String fieldName,
          final Long val) {
-      String predicate = "GoldenRecord." + AppUtils.camelToSnake(fieldName);
+      String predicate = "GoldenRecord." + camelToSnake(fieldName);
       return updateGoldenRecordPredicate(goldenId, predicate, val);
    }
 
@@ -330,9 +295,9 @@ final class DgraphMutations {
       if (grec == null) {
          return Either.left(new MpiServiceError.GoldenIdDoesNotExistError("Golden Record not found", currentGoldenId));
       }
-      if (!deletePredicate(currentGoldenId, DGraphConfig.PREDICATE_GOLDEN_RECORD_INTERACTIONS, interactionId)) {
+      if (!deletePredicate(currentGoldenId, CustomDgraphConstants.PREDICATE_GOLDEN_RECORD_INTERACTIONS, interactionId)) {
          return Either.left(new MpiServiceError.DeletePredicateError(interactionId,
-                                                                     DGraphConfig.PREDICATE_GOLDEN_RECORD_INTERACTIONS));
+                                                                     CustomDgraphConstants.PREDICATE_GOLDEN_RECORD_INTERACTIONS));
       }
       if (count == 1) {
          deleteGoldenRecord(currentGoldenId);
@@ -341,7 +306,7 @@ final class DgraphMutations {
                                                                interaction.interactionId(),
                                                                interaction.sourceId().uid(),
                                                                score,
-                                                               new AuxGoldenRecordData(interaction.auxInteractionData()));
+                                                               new CustomUniqueGoldenRecordData(interaction.uniqueInteractionData()));
       return Either.right(new LinkInfo(newGoldenID, interactionId, interaction.sourceId().uid(), score));
    }
 
@@ -393,17 +358,7 @@ final class DgraphMutations {
 
    Option<MpiGeneralError> createSchema() {
       final var schema =
-            DGRAPH_CONFIG.mutationCreateAdditionalNodeType
-            + System.lineSeparator()
-            + DGRAPH_CONFIG.mutationCreateGoldenRecordType
-            + System.lineSeparator()
-            + DGRAPH_CONFIG.mutationCreateInteractionType
-            + System.lineSeparator()
-            + DGRAPH_CONFIG.mutationCreateAdditionalNodeFields
-            + System.lineSeparator()
-            + DGRAPH_CONFIG.mutationCreateGoldenRecordFields
-            + System.lineSeparator()
-            + DGRAPH_CONFIG.mutationCreateInteractionFields;
+            CustomDgraphConstants.MUTATION_CREATE_SOURCE_ID_TYPE + CustomDgraphConstants.MUTATION_CREATE_GOLDEN_RECORD_TYPE + CustomDgraphConstants.MUTATION_CREATE_INTERACTION_TYPE + CustomDgraphConstants.MUTATION_CREATE_SOURCE_ID_FIELDS + CustomDgraphConstants.MUTATION_CREATE_GOLDEN_RECORD_FIELDS + CustomDgraphConstants.MUTATION_CREATE_INTERACTION_FIELDS;
       try {
          final DgraphProto.Operation operation = DgraphProto.Operation.newBuilder().setSchema(schema).build();
          DgraphClient.getInstance().alter(operation);
